# lilas

./: .editorconfig  .gitignore  README.md
api/: .gitignore  Makefile  format  lint  pylintrc  setup.cfg
api/tibetiapi/: cli.py  db.py  models.py  server.py
devops/git/hooks/: Makefile  commit-msg  commit-template  pre-commit
web/: .eslintrc.json  .prettierrc.json  next.config.js  package-lock.json  package.json
web/pages/: index.tsx
web/pages/api/: index.ts
