
[metadata]
name = tibetiapi
version = 0.0.1

[options]
packages = find:
zip_safe = False
install_requires =
    click
    responder
    sqlalchemy

[options.entry_points]
console_scripts =
    tibetiapi = tibetiapi.cli:main

[options.extras_require]
dev =
    bandit
    black
    flake8
    flake8-bugbear
    flake8-print
    flake8-import-order
    isort
    mypy
    pep8-naming
    pylint
    radon

[isort]
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
line_length = 120
not_skip = __init__.py
use_parentheses = True
multi_line_output = 3

[flake8]
max-line-length = 120
ignore = I100,I201

